# axiom

./: .dockerignore  APP_GUIDE.md  Dockerfile  README.md  config.py  database.py  docker-compose.yml  main.py  pyproject.toml  seed.py  start.sh
.claude/: APP_GUIDE.md  CLAUDE.md  DASHBOARD_SKILL.md
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_output_dir.py  003_add_run_group.py  004_add_comparisons.py  005_rename_query_type_to_tag.py  015_add_trace_conversation_id.py
api/: agents.py  analytics.py  browse.py  charts.py  comparisons.py  export.py  grades.py  results.py  runs.py  sse.py  suites.py  traces.py
docs/: ARCHITECTURE.md
executors/: base.py  openai_agents.py  registry.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/agents/: page.tsx
frontend/src/app/compare/: page.tsx
frontend/src/hooks/: use-json-search.ts  use-sse.ts  use-theme.ts
frontend/src/lib/: types.ts  workspace.ts
frontend/src/providers/: tag-filter-provider.tsx
frontend/src/styles/: hljs-theme.css
models/: __init__.py  agent.py  comparison.py  grade.py  query.py  result.py  run.py  suite.py  trace_log.py
pages/: views.py
schemas/: schemas.py
services/: analytics.py  charts.py  html_export.py  openai_pricing.py  trace_utils.py
static/css/: main.css
static/js/: dashboard.js  grading.js
templates/: base.html  compare.html
templates/agents/: list.html
templates/runs/: detail.html  list.html  new.html
templates/suites/: detail.html  list.html
workers/: runner.py  sse_bus.py
(+45 files in other folders)
